# okx-hft-research

./: .gitignore  Makefile  README.md  bootstrap.py  pyproject.toml  recon_log.txt  requirements.txt
apps/: __init__.py
apps/api/: main.py
apps/streamlit/: Home.py
configs/: app.yaml  db.yaml  instruments.yaml  research.yaml
data_samples/: README.md
docs/architecture/: catboost_baseline_training_ru.md  data_sources.md  modeling_dataset_baseline_builder_ru.md  orderbook_reconstruction_and_validation_ru.md  promotion_to_production.md  repository_structure.md
docs/hypotheses/: backlog.md  hypothesis_template.md
docs/visuals/: chart_catalog.md
experiments/EXP-001-orderbook-imbalance/: README.md  config.yaml  results.md
notebooks/exploratory/: 000_common_research.ipynb  001_orderbook_replay.ipynb  001_orderbook_sanity_check.ipynb  002_orderbook_heatmap.ipynb  003_imbalance_analysis.ipynb  004_reconstructed_orderbook.ipynb  005_microprice_analysis.ipynb  006_orderflow_analysis.ipynb  007_liquidity_dynamics.ipynb  008_spread_analysis.ipynb  009_regime_analysis.ipynb  010_feature_interactions.ipynb  011_eda_model_bootstrap.ipynb
research/: __init__.py
scripts/: build_features_merged_w3600.py  build_targets_260_550_custom.py  check_raw_data.py  diagnose_orderbook_forensics.py  export_orderbook_sample.py  generate_002_directional_eda_nb.py  reconstruct_orderbook_to_parquet.py  run_feature_build.py  run_signal_eval.py  run_streamlit.sh  validate_orderbook_reconstruction.py
tests/: test_features_imbalance.py  test_features_spread.py  test_labels_future_move.py
(+73 files in other folders)
